[package]
name = "mdbook-chapter-list"
version = "0.1.1"
authors = ["Brad Campbell <bradjc5@gmail.com>"]
description = "mdbook preprocessor for listing subchapters."
repository = "https://github.com/bradjc/mdbook-chapter-list.git"
keywords = ["mdbook", "markdown"]

edition = "2021"

readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mdbook = { version = "0.4.52", default-features = false }
semver = "1.0.28"
serde_json = "1.0.149"
pathdiff = "0.2.3"
